--- a/Frontend/All_Ind_admin.html
+++ b/Frontend/All_Ind_admin.html
@@ -131,12 +131,12 @@
 
 
     <!-- Search Bar -->
-    <div class="container my-4" style="padding-top: 5rem">
+    <div class="container my-5" style="padding-top: 5rem">
         <div class="input-group">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search for NGOs..."
-                style="border-radius: 5px;">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for Volunteers ..."
+                style="border-radius: 1rem;">
             <button id="clearButton" class="btn btn-secondary" type="button"
-                style="border-radius: 5px; margin-left: 10px;">Clear</button>
+                style="border-radius: 1rem; margin-left: 1vw;">Clear</button>
         </div>
     </div>
 
@@ -163,6 +163,7 @@
                     return;
                 }
                 volunteers = await response.json();
+                setupSearch();
                 displayVolunteers();
 
             } catch (error) {
@@ -223,6 +224,58 @@
             });
         }
 
+        function displayFilteredVolunteers(filteredVolunteers) {
+            const container = document.getElementById('volunteer-container');
+            container.innerHTML = ''; // Clear previous content
+
+            if (filteredVolunteers.length === 0) {
+                const message = document.createElement('div');
+                message.className = 'message-card'; // Apply custom message-card class
+                message.textContent = 'No Volunteers Found';
+
+                container.appendChild(message);
+                return;
+            }
+
+            filteredVolunteers.forEach(volunteer => {
+                const volunteerCard = `
+                    <div class="container mt-2">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="card mb-4">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <h5 class="card-title">Full Name: ${volunteer.full_name}</h5>
+                                                <p class="card-text">Email: ${volunteer.email_address}</p>
+                                                <p class="card-text">Phone Number: ${volunteer.phone_number}</p>
+                                                <p class="card-text">Date of Birth: ${new Date(volunteer.date_of_birth).toLocaleDateString()}</p>
+                                                <p class="card-text">Current Work Status: ${volunteer.current_work_status}</p>
+                                                <p class="card-text">Address Line 1: ${volunteer.home_address.address_line_1}</p>
+                                                <p class="card-text">Address Line 2: ${volunteer.home_address.address_line_2 || ''}</p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p class="card-text">City: ${volunteer.home_address.city}</p>
+                                                <p class="card-text">State: ${volunteer.home_address.state}</p>
+                                                <p class="card-text">Zip Code: ${volunteer.home_address.zip_code}</p>
+                                                <p class="card-text">Country: ${volunteer.home_address.country}</p>
+                                                <p class="card-text">Latitude: ${volunteer.home_address.geo_location.latitude}</p>
+                                                <p class="card-text">Longitude: ${volunteer.home_address.geo_location.longitude}</p>
+                                            </div>
+                                        </div>
+                                        <div class="text-center mt-3">
+                                            <button class="btn btn-danger btn-verify" style="border-radius: 5px;"
+                                                    onclick="confirmDeleteVolunteer('${volunteer._id}')">Delete Volunteer</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>`;
+                container.insertAdjacentHTML('beforeend', volunteerCard);
+            });
+        }
+
         async function deleteVolunteer(id) {
             try {
                 const token = localStorage.getItem('authToken');
@@ -235,16 +288,18 @@
                 });
                 if (response.status === 200) {
                     const restaurantCard = document.getElementById('volunteer-container');
-                    restaurantCard.innerHTML = ''; // Clear current content
-                    fetchVolunteers(); // Reload the list after deletion
+                    restaurantCard.innerHTML = '';
+                    const searchInput = document.getElementById('searchInput');
+                    searchInput.value = '';
+                    fetchVolunteers();
                     alert('Volunteer deleted successfully');
                 } else {
                     const data = await response.json();
-                    alert(`Error: ${data.message}`); // Display error message from the response
+                    alert(`Error: ${data.message}`); 
                 }
             } catch (error) {
                 console.error(error);
-                alert('Error deleting volunteer'); // Handle error
+                alert('Error deleting volunteer'); 
             }
         }
 
@@ -254,12 +309,24 @@
     <script>
         function confirmDeleteVolunteer(volunteerId) {
             if (confirm("Are you sure you want to delete this volunteer?")) {
-                // Call your deleteVolunteer function here
                 deleteVolunteer(volunteerId);
-            } else {
-                // Optional: Provide feedback or take other action if the user cancels
-                console.log("Deletion canceled.");
             }
+        }
+        function setupSearch() {
+            const searchInput = document.getElementById('searchInput');
+            const clearButton = document.getElementById('clearButton');
+
+            // Perform search on each input event
+            searchInput.addEventListener('input', () => {
+                const query = searchInput.value.toLowerCase();
+                const filteredVolunteers = volunteers.filter(volunteer => volunteer.full_name.toLowerCase().includes(query));
+                displayFilteredVolunteers(filteredVolunteers);
+            });
+
+            clearButton.addEventListener('click', () => {
+                searchInput.value = '';
+                displayVolunteers(); 
+            });
         }
     </script>
 
