--- a/Frontend/Verification_Ind_admin.html
+++ b/Frontend/Verification_Ind_admin.html
@@ -128,12 +128,12 @@
     </nav>
     <!-- END nav -->
 
-    <div class="container my-4" style="padding-top: 5rem">
+    <div class="container my-5" style="padding-top: 5rem">
         <div class="input-group">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search for NGOs..."
-                style="border-radius: 5px;">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for Volunteers ..."
+                style="border-radius: 1rem;">
             <button id="clearButton" class="btn btn-secondary" type="button"
-                style="border-radius: 5px; margin-left: 10px;">Clear</button>
+                style="border-radius: 1rem; margin-left: 1vw;">Clear</button>
         </div>
     </div>
 
@@ -160,6 +160,7 @@
                     return;
                 }
                 volunteers = await response.json();
+                setupSearch();
                 displayVolunteers();
 
             } catch (error) {
@@ -224,6 +225,62 @@
             });
         }
 
+        function displayFilteredVolunteers(filteredVolunteers) {
+            const container = document.getElementById('volunteer-container');
+            container.innerHTML = ''; // Clear previous content
+
+            if (filteredVolunteers.length === 0) {
+                const message = document.createElement('div');
+                message.className = 'message-card'; // Apply custom message-card class
+                message.textContent = 'No Pending Requests';
+
+                container.appendChild(message);
+                return;
+            }
+
+            filteredVolunteers.forEach(volunteer => {
+                const volunteerCard = `
+                    <div class="container mt-2">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="card mb-4">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <h5 class="card-title">Full Name: ${volunteer.full_name}</h5>
+                                                <p class="card-text">Email: ${volunteer.email_address}</p>
+                                                <p class="card-text">Phone Number: ${volunteer.phone_number}</p>
+                                                <p class="card-text">Date of Birth: ${new Date(volunteer.date_of_birth).toLocaleDateString()}</p>
+                                                <p class="card-text">Current Work Status: ${volunteer.current_work_status}</p>
+                                                <p class="card-text">Address Line 1: ${volunteer.home_address.address_line_1}</p>
+                                                <p class="card-text">Address Line 2: ${volunteer.home_address.address_line_2 || ''}</p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p class="card-text">City: ${volunteer.home_address.city}</p>
+                                                <p class="card-text">State: ${volunteer.home_address.state}</p>
+                                                <p class="card-text">Zip Code: ${volunteer.home_address.zip_code}</p>
+                                                <p class="card-text">Country: ${volunteer.home_address.country}</p>
+                                                <p class="card-text">Latitude: ${volunteer.home_address.geo_location.latitude}</p>
+                                                <p class="card-text">Longitude: ${volunteer.home_address.geo_location.longitude}</p>
+                                            </div>
+                                        </div>
+                                        <div class="text-center mt-3">
+                                            <button class="btn btn-success btn-verify" style="border-radius: 5px;"
+                                                    onclick="confirmVerifyVolunteer('${volunteer._id}')">Verify Volunteer</button>
+                                        </div>
+                                        <div class="text-center mt-3">
+                                            <button class="btn btn-danger btn-verify" style="border-radius: 5px;"
+                                                    onclick="confirmDeleteVolunteer('${volunteer._id}')">Delete Request</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>`;
+                container.insertAdjacentHTML('beforeend', volunteerCard);
+            });
+        }
+
         async function VerifyVolunteer(vol_id) {
             try {
                 const temp = {
@@ -244,6 +301,8 @@
                 if (response.status === 201) {
                     const volCard = document.getElementById('volunteer-container');
                     volCard.innerHTML = '';
+                    const searchInput = document.getElementById('searchInput');
+                    searchInput.value = '';
                     alert('Volunteer verified successfully');
                     fetchVolunteers();
                 } else {
@@ -251,7 +310,6 @@
                     alert(`Error: ${data.message}`); // Display error message from the response
                 }
             } catch (error) {
-                // console.log(error);
                 alert('Error verifying volunteer'); // Handle error
             }
         }
@@ -268,9 +326,11 @@
                 });
                 if (response.status === 200) {
                     const restaurantCard = document.getElementById('volunteer-container');
+                    restaurantCard.innerHTML = ''; 
                     alert('Volunteer deleted successfully');
-                    restaurantCard.innerHTML = ''; // Clear current content
-                    fetchVolunteers(); // Reload the list after deletion
+                    const searchInput = document.getElementById('searchInput');
+                    searchInput.value = '';
+                    fetchVolunteers(); 
                 } else {
                     const data = await response.json();
                     alert(`Error: ${data.message}`); // Display error message from the response
@@ -290,11 +350,26 @@
                 VerifyVolunteer(volunteerId);
             }
         }
-
         function confirmDeleteVolunteer(volunteerId) {
             if (confirm("Are you sure you want to delete this volunteer?")) {
                 deleteVolunteer(volunteerId);
             }
+        }
+        function setupSearch() {
+            const searchInput = document.getElementById('searchInput');
+            const clearButton = document.getElementById('clearButton');
+
+            // Perform search on each input event
+            searchInput.addEventListener('input', () => {
+                const query = searchInput.value.toLowerCase();
+                const filteredVolunteers = volunteers.filter(volunteer => volunteer.full_name.toLowerCase().includes(query));
+                displayFilteredVolunteers(filteredVolunteers);
+            });
+
+            clearButton.addEventListener('click', () => {
+                searchInput.value = '';
+                displayVolunteers(); 
+            });
         }
     </script>
     
