--- a/Frontend/Verification_restaurant_admin.html
+++ b/Frontend/Verification_restaurant_admin.html
@@ -133,12 +133,12 @@
     <!-- END nav -->
 
     <!-- Search Bar -->
-    <div class="container my-4" style="padding-top: 5rem">
+    <div class="container my-5" style="padding-top: 5rem">
         <div class="input-group">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search Here..."
-                style="border-radius: 5px;">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for Volunteers ..."
+                style="border-radius: 1rem;">
             <button id="clearButton" class="btn btn-secondary" type="button"
-                style="border-radius: 5px; margin-left: 10px;">Clear</button>
+                style="border-radius: 1rem; margin-left: 1vw;">Clear</button>
         </div>
     </div>
 
@@ -165,6 +165,7 @@
                     return;
                 }
                 restaurants = await response.json();
+                setupSearch();
                 displayRestaurants();
 
             } catch (error) {
@@ -258,6 +259,78 @@
             });
         }
 
+        function displayFilteredRestaurants(filteredRestaurants) {
+            const container = document.getElementById('restaurant-container');
+            container.innerHTML = ''; // Clear previous content
+
+            if (filteredRestaurants.length === 0) {
+                const message = document.createElement('div');
+                message.className = 'message-card'; // Apply custom message-card class
+                message.textContent = 'No Pending Requests';
+
+                container.appendChild(message);
+                return;
+            }
+
+            filteredRestaurants.forEach(restaurant => {
+                const restaurantCard = `
+                <div class="container mt-2">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <h5 class="card-title">Restaurant Name: ${restaurant.name}</h5>
+                                            <p class="card-text">Type: ${restaurant.type}</p>
+                                            <p class="card-text">Manager Name: ${restaurant.manager_name}</p>
+                                            <p class="card-text">Business License Number: ${restaurant.business_license_number}</p>
+                                            <p class="card-text">Website:
+                                                ${restaurant.website_url ?
+                                                `<a href="javascript:void(0);" 
+                                                    onclick="redirectToWebsite('${restaurant.website_url}')">
+                                                    ${restaurant.website_url}
+                                                </a>`
+                                                : "Not Avaialable"}
+                                            </p>
+                                                <p class="card-text">Food Handlers Permit: 
+                                                ${restaurant.food_handlers_permit ?
+                                                    `<a href="javascript:void(0);" 
+                                                        onclick="viewFoodHandlersPermit('${restaurant.food_handlers_permit}')">
+                                                        Click here to view
+                                                    </a>`
+                                                    : 'Not available'}
+                                                </p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p class="card-text">Email: ${restaurant.primary_contact_email}</p>
+                                                <p class="card-text">Phone: ${restaurant.primary_contact_phone}</p>
+                                            <p class="card-text"> Address : ${formatAddress(restaurant.physical_address)}</p>
+                                             <p class="card-text">Location: 
+                                                <a href="javascript:void(0);" 
+                                                    onclick="viewLocationOnMap(${restaurant.physical_address.geo_location.latitude}, ${restaurant.physical_address.geo_location.longitude})">
+                                                    Click here to view on map
+                                                </a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="text-center mt-3">
+                                        <button class="btn btn-success btn-verify" style="border-radius: 5px;"
+                                                onclick="confirmVerifyRestaurant('${restaurant._id}')">Verify Restaurant</button>
+                                    </div>
+                                    <div class="text-center mt-3">
+                                        <button class="btn btn-danger btn-verify" style="border-radius: 5px;"
+                                                onclick="confirmDeleteRestaurant('${restaurant._id}')">Delete Restaurant</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>`;
+                container.insertAdjacentHTML('beforeend', restaurantCard);
+            });
+        }
+
         function formatAddress(address) {
             return `
             ${address.address_line_1}, ${address.address_line_2 ? address.address_line_2 + ', ' : ''}
@@ -266,7 +339,6 @@
         }
 
         async function VerifyRestaurant(rest_id) {
-            const temp = { rest_id: rest_id }
             const formData = new FormData();
             formData.append('rest_id', rest_id);
             try {
@@ -280,8 +352,10 @@
                 });
                 if (response.status === 201) {
                     const restaurantCard = document.getElementById('restaurant-container');
-                    restaurantCard.innerHTML = ''; // Clear current content
-                    fetchRestaurants(); // Reload the list after deletion
+                    restaurantCard.innerHTML = '';
+                    const searchInput = document.getElementById('searchInput');
+                    searchInput.value = '';
+                    fetchRestaurants(); 
                     alert('Restaurant Verified successfully');
                 } else {
                     alert('Failed to verify restaurant');
@@ -304,8 +378,10 @@
                 });
                 if (response.status === 200) {
                     const restaurantCard = document.getElementById('restaurant-container');
-                    restaurantCard.innerHTML = ''; // Clear current content
-                    fetchRestaurants(); // Reload the list after deletion
+                    restaurantCard.innerHTML = '';
+                    const searchInput = document.getElementById('searchInput');
+                    searchInput.value = '';
+                    fetchRestaurants(); 
                     alert('Restaurant deleted successfully');
                 } else {
                     alert('Failed to delete restaurant');
@@ -331,6 +407,22 @@
             if (confirm("Are you sure you want to delete this restaurant?")){
                 deleteRestaurant(restaurantId);
             }
+        }
+        function setupSearch() {
+            const searchInput = document.getElementById('searchInput');
+            const clearButton = document.getElementById('clearButton');
+
+            // Perform search on each input event
+            searchInput.addEventListener('input', () => {
+                const query = searchInput.value.toLowerCase();
+                const filteredRestaurants = restaurants.filter(restaurant => restaurant.name.toLowerCase().includes(query));
+                displayFilteredRestaurants(filteredRestaurants);
+            });
+
+            clearButton.addEventListener('click', () => {
+                searchInput.value = '';
+                displayNGOs(); 
+            });
         }
     </script>
 
