updation of admin navbar

--- a/Frontend/All_Ind_admin.html
+++ b/Frontend/All_Ind_admin.html
@@ -75,10 +75,10 @@
 </head>
 
 <body>
-
+    
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Welfare</a>
+            <a class="navbar-brand" href="index_admin.html">Welfare</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
@@ -87,7 +87,7 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="index_admin.html" class="nav-link">Home</a></li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Volunteers
@@ -120,6 +120,7 @@
                             <li><a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item"><a href="donation_histroy_admin.html" class="nav-link">Food Logs</a></li>
                     <li class="nav-item">
                         <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
                     </li>
@@ -127,7 +128,6 @@
             </div>
         </div>
     </nav>
-    <!-- END nav -->
 
 
     <!-- Search Bar -->
