--- a/Frontend/donation_histroy_admin.html
+++ b/Frontend/donation_histroy_admin.html
@@ -126,7 +126,7 @@
                             <li><a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="donation_histroy_admin.html" class="nav-link">Food Logs</a></li>
+                    <li class="nav-item active"><a href="donation_histroy_admin.html" class="nav-link">Food Logs</a></li>
                     <li class="nav-item">
                         <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
                     </li>
