--- a/Frontend/Verification_ngo_admin.html
+++ b/Frontend/Verification_ngo_admin.html
@@ -73,68 +73,59 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Welfare</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu
-      </button>
+        <a class="navbar-brand" href="index_admin.html">Welfare</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+            aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="oi oi-menu"></span> Menu
+        </button>
 
-      <div class="collapse navbar-collapse" id="ftco-nav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a href="index_admin.html" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Volunteers
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item" href="Verification_Ind_admin.html">Pending Verification</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="All_Ind_admin.html">All Volunteers</a>
-              </li>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="index_admin.html" class="nav-link">Home</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Volunteers
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="Verification_Ind_admin.html">Pending Verification</a>
+                        </li>
+                        <li><a class="dropdown-item" href="All_Ind_admin.html">All Volunteers</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        NGO
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="Verification_ngo_admin.html">Pending Verification</a>
+                        </li>
+                        <li><a class="dropdown-item" href="All_ngo_admin.html">All NGOs</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Restaurant
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="Verification_restaurant_admin.html">Pending
+                                Verification</a></li>
+                        <li><a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="donation_histroy_admin.html" class="nav-link">Food Logs</a></li>
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                </li>
             </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              NGO
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item" href="Verification_ngo_admin.html">Pending Verification</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="All_ngo_admin.html">All NGOs</a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Restaurant
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item" href="Verification_restaurant_admin.html">Pending Verification</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
-          </li>
-        </ul>
-      </div>
+        </div>
     </div>
-  </nav>
+</nav>
   <!-- END nav -->
 
   <!-- Search Bar -->
