--- a/Frontend/index_admin.html
+++ b/Frontend/index_admin.html
@@ -76,7 +76,7 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index_admin.html" class="nav-link">Home</a></li>
+                    <li class="nav-item active"><a href="index_admin.html" class="nav-link">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
