--- a/Frontend/Profile_Ind.html
+++ b/Frontend/Profile_Ind.html
@@ -357,7 +357,7 @@
     </div>
 
     <script>
-        document.getElementById('logoutLink').addEventListener('click', function (event) {
+        document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
             event.preventDefault(); // Prevent the default link action
             var confirmation = confirm('Are you sure you want to logout?');
             if (confirmation) {
