--- a/Frontend/Profile_ngo.html
+++ b/Frontend/Profile_ngo.html
@@ -610,6 +610,7 @@
 
                     if (response.status === 200) {
                         alert('Account deleted successfully');
+                        localStorage.clear();
                         window.location.href = 'index.html';
                     } else {
                         const data = await response.json();
@@ -658,47 +659,9 @@
 
             $('#photoModal').modal('show');
         }
-
-        document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
-            event.preventDefault(); // Prevent the default link action
-            var confirmation = confirm('Are you sure you want to logout?');
-            if (confirmation) {
-                window.location.href = 'index.html';
-            }
-        });
-
-        function getLocation() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(showPosition, showError);
-            } else {
-                alert("Geolocation is not supported by this browser.");
-            }
-        }
-
-        function showPosition(position) {
-            document.getElementById('editlatitude').value = position.coords.latitude;
-            document.getElementById('editlongitude').value = position.coords.longitude;
-        }
-
-        function showError(error) {
-            switch (error.code) {
-                case error.PERMISSION_DENIED:
-                    alert("User denied the request for Geolocation.");
-                    break;
-                case error.POSITION_UNAVAILABLE:
-                    alert("Location information is unavailable.");
-                    break;
-                case error.TIMEOUT:
-                    alert("The request to get user location timed out.");
-                    break;
-                case error.UNKNOWN_ERROR:
-                    alert("An unknown error occurred.");
-                    break;
-            }
-        }
     </script>
     <script>
-        document.getElementById('logoutLink').addEventListener('click', function (event) {
+        document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
             event.preventDefault(); // Prevent the default link action
             var confirmation = confirm('Are you sure you want to logout?');
             if (confirmation) {
@@ -707,6 +670,7 @@
             }
         });
     </script>
+    <script src="js/get_location.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
