--- a/Frontend/Profile_restaurant.html
+++ b/Frontend/Profile_restaurant.html
@@ -536,7 +536,7 @@
         }
     </script>
     <script>
-        document.getElementById('logoutLink').addEventListener('click', function (event) {
+        document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
             event.preventDefault(); // Prevent the default link action
             var confirmation = confirm('Are you sure you want to logout?');
             if (confirmation) {
