--- a/Frontend/accepted_donations_restaurant.html
+++ b/Frontend/accepted_donations_restaurant.html
@@ -280,7 +280,7 @@
     </footer>
 
     <script>
-        document.getElementById('logoutLink').addEventListener('click', function (event) {
+        document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
             event.preventDefault(); // Prevent the default link action
             var confirmation = confirm('Are you sure you want to logout?');
             if (confirmation) {
@@ -345,7 +345,7 @@
                             <p class="card-text">Category: ${donation.foodtype}</p>
                             <p class="card-text">Packaged: ${donation.packaged ? 'Yes' : 'No'}</p>
                             <p class="card-text">Pickup Address: ${donation.pickupLocation.address.address_line_1},
-                                ${donation.pickupLocation.address.address_line_2 || 'None'}, 
+                                ${donation.pickupLocation.address.address_line_2 || ''}, 
                                 ${donation.pickupLocation.address.city}</p>
                         </div>
                         <div class="col-md-6">
@@ -406,14 +406,13 @@
             $('#photoModal').modal('show');
         }
 
-        document.addEventListener('DOMContentLoaded', fetchFoodTransactions);
+        document.addEventListener('DOMContentLoaded', fetchFoodTransactions());
 
     </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- <script src="js/ngo_cards.js"></script> -->
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
