--- a/Frontend/contact_Ind.html
+++ b/Frontend/contact_Ind.html
@@ -196,7 +196,7 @@
     </svg></div>
 
   <script>
-    document.getElementById('logoutLink').addEventListener('click', function (event) {
+    document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
       event.preventDefault(); // Prevent the default link action
       var confirmation = confirm('Are you sure you want to logout?');
       if (confirmation) {
