--- a/Frontend/contact_restaurant.html
+++ b/Frontend/contact_restaurant.html
@@ -207,12 +207,12 @@
     </svg></div>
 
   <script>
-    document.getElementById('logoutLink').addEventListener('click', function (event) {
-      event.preventDefault(); // Prevent the default link action
+    document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
+      event.preventDefault();
       var confirmation = confirm('Are you sure you want to logout?');
       if (confirmation) {
         localStorage.clear();
-        window.location.href = 'index.html'; // Redirect to the logout page
+        window.location.href = 'index.html';
       }
     });
   </script>
