--- a/Frontend/index_restaurant.html
+++ b/Frontend/index_restaurant.html
@@ -379,7 +379,7 @@
     </svg></div>
 
   <script>
-    document.getElementById('logoutLink').addEventListener('click', function (event) {
+    document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
       event.preventDefault(); // Prevent the default link action
       var confirmation = confirm('Are you sure you want to logout?');
       if (confirmation) {
@@ -388,7 +388,6 @@
       }
     });
   </script>
-  <script src="js/ngo_cards.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
