--- a/Frontend/ngolist_Ind.html
+++ b/Frontend/ngolist_Ind.html
@@ -158,7 +158,7 @@
         </svg></div>
 
     <script>
-        document.getElementById('logoutLink').addEventListener('click', function (event) {
+        document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
             event.preventDefault(); // Prevent the default link action
             var confirmation = confirm('Are you sure you want to logout?');
             if (confirmation) {
