--- a/Frontend/ngolist_ngo.html
+++ b/Frontend/ngolist_ngo.html
@@ -169,7 +169,7 @@
 
 
     <script>
-        document.getElementById('logoutLink').addEventListener('click', function (event) {
+        document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
             event.preventDefault(); // Prevent the default link action
             var confirmation = confirm('Are you sure you want to logout?');
             if (confirmation) {
